--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-hs-counselor",
   "version": "1.0.0",
-  "homepage": ".",
+  "homepage": "/",
   "private": true,
   "description": "Personalized career guidance platform for high school students choosing between college and trade paths.",
   "scripts": {
