--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "react-router-dom": "^6.22.3"
+    "jspdf": "^2.5.1"
   },
   "devDependencies": {},
   "browserslist": {
