--- a/package.json
+++ b/package.json
@@ -1,20 +1,33 @@
 {
   "name": "my-hs-counselor",
   "version": "1.0.0",
+  "homepage": "/",
   "private": true,
-  "homepage": "https://dmarti61.github.io/Myhscounselor",
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3",
-    "react-scripts": "^5.0.1",
-    "jspdf": "^3.0.1"
-  },
+  "description": "Personalized career guidance platform for high school students choosing between college and trade paths.",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "dev": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "dependencies": {
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-scripts": "^5.0.1",
+    "react-router-dom": "^7.7.1",
+    "jspdf": "^3.0.1"
+  },
+  "devDependencies": {},
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
