--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "^5.0.1",
-    "react-router-dom": "^7.x.x",
+    "react-router-dom": "^6.30.1",
     "jspdf": "^3.0.1"
   },
   "devDependencies": {
     "react-snap": "^1.23.0",
-    "@netlify/plugin-sitemap": "^0.x.x"
+    "@netlify/plugin-sitemap": "^0.8.1"
   },
   "browserslist": {
     "production": [
