--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "postbuild": "react-snap"
+    "eject": "react-scripts eject"
+    // The "postbuild": "react-snap" line has been removed to prevent Puppeteer issues on Cloudflare Pages.
   },
   "dependencies": {
     "react": "^19.1.0",
