--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
   "name": "my-hs-counselor",
   "version": "1.0.0",
-  "homepage": "/",
   "private": true,
   "description": "Personalized career guidance platform for high school students choosing between college and trade paths.",
+  "homepage": "/",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-scripts": "^5.0.1",
     "react-router-dom": "^6.30.1",
     "jspdf": "^3.0.1"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.1.0",
+    "vite": "^5.2.0",
+    "eslint": "^9.0.0",
+    "eslint-plugin-react": "^7.34.1"
   },
   "browserslist": {
     "production": [
