--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-hs-counselor",
   "version": "1.0.0",
   "private": true,
-  "description": "Personalized career guidance platform for high school students choosing between college and trade paths.",
+  "description": "Personalized career guidance platform for high school students",
   "homepage": "/",
   "scripts": {
     "dev": "vite",
